ci: Add push trigger and self-referential paths
- Add push trigger for main branch
- Add workflow and config file paths to triggers
- Ensures workflow runs on its own changes

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,11 +1,24 @@
 name: Documentation
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
       - '.ai/**'
       - '*.md'
       - 'docs/**'
+      - '.github/workflows/docs.yaml'
+      - '.markdownlint.json'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - '.ai/**'
+      - '*.md'
+      - 'docs/**'
+      - '.github/workflows/docs.yaml'
+      - '.markdownlint.json'
 
 jobs:
   lint:
