--- a/examples/beta-runners-values.yaml
+++ b/examples/beta-runners-values.yaml
@@ -10,8 +10,9 @@ gha-runner-scale-set:
   githubConfigUrl: "https://github.com/Matchpoint-AI"
   runnerScaleSetName: "arc-beta-runners"
 
-  githubConfigSecret:
-    github_token: "YOUR_GITHUB_TOKEN_HERE"  # Overridden by ArgoCD
+  # Reference pre-defined secret with org-level PAT (created manually in cluster)
+  # Secret must be created with: kubectl create secret generic arc-org-github-secret --namespace=arc-beta-runners-v2 --from-literal=github_token='ghp_...'
+  githubConfigSecret: arc-org-github-secret
 
   minRunners: 1      # Keep at least 1 runner warm
   maxRunners: 20
