fix: move org runner back to arc-runners namespace

--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -8,9 +8,9 @@ spec:
   - list:
       elements:
       # Org-level runner serves all repositories (project-beta, project-beta-api, project-beta-frontend)
-      # Using arc-beta-runners-new namespace where the GitHub PAT secret exists
-      - name: arc-beta-runners-new
-        namespace: arc-beta-runners-new
+      # Using arc-runners namespace where the GitHub PAT secret exists
+      - name: arc-runners
+        namespace: arc-runners
         valuesFile: examples/runners-values.yaml
         repo: Matchpoint-AI
   template:
