--- a/examples/runners-values.yaml
+++ b/examples/runners-values.yaml
@@ -14,7 +14,7 @@ gha-runner-scale-set:
   # Secret must be created with: kubectl create secret generic arc-org-github-secret --namespace=arc-runners --from-literal=github_token='ghp_...'
   githubConfigSecret: arc-org-github-secret
 
-  minRunners: 2      # Keep 2 runners pre-warmed to eliminate cold-start delays (Issue #72, #76)
+  minRunners: 0      # Allow scale-to-zero; cold-start prewarming not required
   maxRunners: 20
 
   # Security context for beta runners - removed to allow runner to work properly
