--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -23,7 +23,7 @@ on:
 jobs:
   lint:
     name: Lint Markdown
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, arc-runners]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
