--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   lint-test:
     name: Lint & Test Charts
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, arc-runners]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -73,7 +73,7 @@ jobs:
     # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
     permissions:
       contents: write
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, arc-runners]
     needs: lint-test
     if: github.ref == 'refs/heads/main'
     steps:
