fix: load image locally for PR testing instead of pulling from registry

--- a/.github/workflows/build-runner-image.yml
+++ b/.github/workflows/build-runner-image.yml
@@ -64,11 +64,11 @@ jobs:
           context: ./images/arc-runner
           file: ./images/arc-runner/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
+          load: ${{ github.event_name == 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64
 
       - name: Test image
         if: github.event_name == 'pull_request'
